--- a/my-app/.project
+++ b/my-app/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>my-app-2</name>
+	<name>my-app</name>
 	<comment></comment>
 	<projects>
 	</projects>
